--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "axios": "0.18.1",
     "core-js": "3.6.5",
+    "element-china-area-data": "^5.0.2",
     "element-ui": "2.13.2",
     "js-cookie": "2.2.0",
     "js-md5": "^0.7.3",
